# platformio-core

./: .appveyor.yml  .coveragerc  .gitignore  .gitmodules  .isort.cfg  .pylintrc  .readthedocs.yml  .style.yapf  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  SECURITY.md  appveyor.yml  circle.yml  final.py  protocols.py  pytest.ini  requirements.txt  setup.py  test_core_dir.py  tox.ini
.github/: FUNDING.yml  ISSUE_TEMPLATE.md
.github/workflows/: core.yml  deployment.yml  docs.yml  examples.yml  main.yml  npm-gulp.yml  projects.yml  stale.yml  terraform.yml  tests.yml
docs/: Makefile  articles.rst  cli.rst  conf.py  core.rst  demo.rst  envvars.rst  faq.rst  history.rst  ide.rst  index.rst  installation.rst  make.bat  migration.rst  projectconf.rst  quickstart.rst  unit_testing.rst  what-is-platformio.rst
docs/_static/: extra.css
docs/_templates/: footer.html  layout.html
docs/ci/: appveyor.rst  circleci.rst  drone.rst  index.rst  shippable.rst  travis.rst
docs/frameworks/: arduino.rst  cmsis.rst  cmsis_extra.rst  energia.rst  espidf.rst  index.rst  libopencm3.rst  libopencm3_extra.rst  mbed.rst  mbed_extra.rst  opencm3.rst  simba.rst  simba_extra.rst  spl.rst  spl_extra.rst  wiringpi.rst  wiringpi_extra.rst
docs/ide/: _platformio_ide_extra.rst  arduino.rst  atom.rst  clion.rst  cloud9.rst  codeanywhere.rst  codeblocks.rst  eclipse.rst  emacs.rst  energia.rst  netbeans.rst  qtcreator.rst  sublimetext.rst  vim.rst  visualstudio.rst
docs/librarymanager/: config.rst  create.rst  creating.rst  index.rst  ldf.rst
docs/plus/: pio-remote.rst  unit-testing.rst
docs/userguide/: cmd_boards.rst  cmd_ci.rst  cmd_device.rst  cmd_init.rst  cmd_install.rst  cmd_list.rst  cmd_run.rst  cmd_search.rst  cmd_serialports.rst  cmd_settings.rst  cmd_show.rst  cmd_test.rst  cmd_uninstall.rst  cmd_update.rst  cmd_upgrade.rst  index.rst
examples/: .gitmodules
examples/arduino-adafruit-library/: platformio.ini
examples/arduino-internal-library/: README.rst  platformio.ini
examples/atmelavr-native-blink/: README.rst  platformio.ini
examples/embedded-blink/: platformio.ini
examples/ide-eclipse/: README.rst
examples/ide/clion/: .gitignore  CMakeLists.txt  README.rst
examples/ide/clion/lib/: readme.txt
examples/ide/clion/src/: blink.ino
examples/timsp430-native-blink/: platformio.ini
examples/titiva-native-blink/: README.rst  platformio.ini
platformio/: __init__.py  __main__.py  app.py  cache.py  cli.py  compat.py  datamodel.py  dependencies.py  downloader.py  exception.py  fs.py  http.py  libmanager.py  lockfile.py  maintenance.py  pioplus.py  pipdeps.py  pkgmanager.py  proc.py  projectconftpl.ini  public.py  telemetry.py  unpacker.py  util.py  vcsclient.py
scripts/: 98-openocd-udev.rules  99-platformio-udev.rules  docspregen.py  fixsymlink.py  get-platformio.py  install_devplatforms.py  mbed_to_package.py
tests/: conftest.py  test_builder.py  test_examples.py  test_ino2cpp.py  test_maintenance.py  test_managers.py  test_misc.py  test_options.py  test_pkgmanifest.py  test_projectconf.py
(+800 files in other folders)
